--- a/Readme
+++ b/Readme
@@ -1,1 +1,1 @@
-This repo contains the new version of CxSystem software.
+This repo contains the new version of CxSystem software. It is written in Python 3.
